# python-fakturoid-v3

./: .gitignore  .pre-commit-config.yaml  AUTHORS  LICENSE  README.md  README.remaining_bits.md  cleanup.py  conftest.py  pyproject.toml  pyrightconfig.json  wiping-script.py
.github/workflows/: pre-commit.yml  python-package.yml
fakturoid/: api.py  model_api.py  models.py  nounapi.py  paging.py  routing.py
tests/: conf.py  conftest.py  defaults.py  mock.py  test_api.py  test_docs.py  test_integration.py  test_nounapi_integration.py  test_routing.py
tests/cassettes/test_integration/: PaginationTest.test_pagination.yaml  test_crud_invoice.yaml  test_crud_subject.yaml  test_pagination.yaml
tests/responses/: account.json  generator_4.json  generators.json  inventory_items.json  inventory_items_203140.json  invoice_9.json  subject_28.json  subjects.json  token.json
